syntax = "proto3";

// command to generate
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./media/mediapb/media.proto

package mediapb;
option go_package = "github.com/odit-bit/sone/media/mediapb";

service MediaService{
    rpc GetSegment(SegmentRequest) returns (stream SegmentResponse) {};
    // rpc PutSegment(PutSegmentRequest) returns (PutSegmentResponse){};
}


message SegmentRequest {
    string path = 1;
}

message SegmentResponse {
    bytes bodyChunk = 1;
}


// message PutSegmentRequest{
//     string path = 2;
//     bytes body = 3;
// }
// message PutSegmentResponse {}